ecmascript/parser/tests/test262-error-references/fail/c75e9f5ea55611f3.js.stderr
error: Expected ;, got )
 --> $DIR/tests/test262-parser/fail/c75e9f5ea55611f3.js:1:23
  |
1 | for(let x=1 in [1,2,3]) 0
  |                       ^

